--- a/mis_peliculas.html
+++ b/mis_peliculas.html
@@ -39,20 +39,29 @@ p3{
         <p1>Una pelicula sobre una familia de superheroes en un mundo donde los supers son ilegales. 
             Esta pelicula me gusta mucho ya que tiene un lore muy profundo y bien hecho.
         </p1>
-        <img src="losincreibles.jpg" alt="los increibles." width="500" >
+        <br>
+        <img src="losincreibles.jpg" alt="los increibles." width="400" >
+        <br>
+        <p><a href="https://www.youtube.com/watch?v=-UaGUdNJdRQ">Ver trailer.</a></p>
         <hr>
         <li>Eurotrip.</li>
         <p2>Esta pelicula trata sobre un chico que hace un viaje hasta alemania con sus amigos con el objetivo de conocer una chica.
             Me encanta esta pelicula por su comedia y su trama es realmente muy entretenida aunque tenga chistes un poco subidos de tono.
         </p2>
-        <img src="eurotrip.jpg" alt="eurotrip.">
+        <br>
+        <img src="eurotrip.jpg" alt="eurotrip." width="300">
+        <br>
+        <p><a href="https://www.youtube.com/watch?v=yZSoJtFxP4A">Ver trailer.</a></p>
         <hr>
         <li>10 things i hate about you.</li>
         <p3>Trata sobre Cameron el cual para poder salir con Bianca, debe encontrarle un novio a su hermana rebelde, Kat, y contrata al misterioso Patrick. 
             Aparte de la trama esta pelicula tiene muchos momentos emotivos y hasta llegue a relacionarme mucho con ciertas situaciones en la pelicula.
         </p3>
-        <img src="10things.jpg" alt="10 things i hate about you." width = 500>
+        <br>
+        <img src="10things.jpg" alt="10 things i hate about you." width = 300>
     </ol>
+    <br>
+    <p><a href="https://www.youtube.com/watch?v=yEmcEuS6xm4">Ver trailer.</a></p>
     <hr>
     
     </h2>
